--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -92,8 +92,8 @@
         android:background="@color/refresh_btn_bg"
         android:padding="@dimen/margin_tine"
         android:scaleType="fitXY"
-        android:src="@drawable/ic_auto_new_24" />
-
+        android:src="@drawable/ic_auto_new_24"
+        android:contentDescription="@null" />
 
     <TextView
         android:id="@+id/lowerCase_img"
@@ -103,7 +103,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="35dp"
         android:layout_marginTop="@dimen/margin_large"
-        app:drawableStartCompat="@drawable/ic_check_24" />
+        app:drawableStartCompat="@drawable/ic_check_24_green" />
 
     <TextView
         android:id="@+id/lowerCase_txt"
@@ -119,46 +119,46 @@
 
 
     <TextView
-        android:id="@+id/UpperCase_img"
+        android:id="@+id/upperCase_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/lowerCase_img"
         android:layout_alignParentStart="true"
         android:layout_marginStart="35dp"
         android:layout_marginTop="@dimen/margin_medium"
-        app:drawableStartCompat="@drawable/ic_check_24" />
+        app:drawableStartCompat="@drawable/ic_check_24_green" />
 
     <TextView
-        android:id="@+id/UpperCase_txt"
+        android:id="@+id/upperCase_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/UpperCase_img"
+        android:layout_alignTop="@+id/upperCase_img"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="25dp"
-        android:layout_toEndOf="@+id/UpperCase_img"
+        android:layout_toEndOf="@+id/upperCase_img"
         android:text="@string/upper_case_letter"
         android:textColor="@color/checked_tv"
         android:textSize="@dimen/letters" />
 
 
     <TextView
-        android:id="@+id/Digit_img"
+        android:id="@+id/digit_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/UpperCase_img"
+        android:layout_below="@+id/upperCase_img"
         android:layout_alignParentStart="true"
         android:layout_marginStart="35dp"
         android:layout_marginTop="@dimen/margin_medium"
-        app:drawableStartCompat="@drawable/ic_check_24" />
+        app:drawableStartCompat="@drawable/ic_check_24_green" />
 
     <TextView
-        android:id="@+id/Digit_txt"
+        android:id="@+id/digit_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/Digit_img"
+        android:layout_alignTop="@+id/digit_img"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="25dp"
-        android:layout_toEndOf="@+id/Digit_img"
+        android:layout_toEndOf="@+id/digit_img"
         android:text="@string/digit"
         android:textColor="@color/checked_tv"
         android:textSize="@dimen/letters" />
@@ -168,11 +168,11 @@
         android:id="@+id/symbols_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/Digit_img"
+        android:layout_below="@+id/digit_img"
         android:layout_alignParentStart="true"
         android:layout_marginStart="35dp"
         android:layout_marginTop="@dimen/margin_medium"
-        app:drawableStartCompat="@drawable/ic_check_24" />
+        app:drawableStartCompat="@drawable/ic_check_24_green" />
 
     <TextView
         android:id="@+id/symbols_tv"
@@ -195,7 +195,7 @@
         android:layout_marginStart="35dp"
         android:layout_marginTop="@dimen/margin_medium"
         android:visibility="gone"
-        app:drawableStartCompat="@drawable/ic_check_24" />
+        app:drawableStartCompat="@drawable/ic_check_24_green" />
 
     <TextView
         android:id="@+id/similar_char_tv"
