--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,6 +5,7 @@
     <color name="dark_blue">#28425C</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#16a475</color>
+    <color name="red">#FF4646</color>
     <color name="main_app_color">#FF018786</color>
     <color name="gray">#b4bcbf</color>
     <color name="lightGray">#E3E3E3</color>
@@ -33,6 +34,7 @@
     <color name="copy_btn_tv">@color/lightGray</color>
     <color name="refresh_btn_bg">@color/main_app_color</color>
     <color name="refresh_btn_icon">@color/lightGray</color>
-    <color name="check_icon">@color/green</color>
+    <color name="check_icon_green">@color/green</color>
+    <color name="check_icon_red">@color/red</color>
     <color name="checked_tv">@color/green</color>
 </resources>
